# Computacao-Grafica

./: todo.md
convolution-filter/: pyproject.toml
convolution-filter/src/: convolution.py
dilation-erosion/: requirements.txt
dilation-erosion-grayscale/: pyproject.toml
dilation-erosion-grayscale/src/: dilation-erosion-grayscale.py
dilation-erosion/src/: dilation-erosion.py
discrete-cosine-transform/: pyproject.toml
discrete-cosine-transform/src/: dct.py
image-equalize/: pyproject.toml  requirements.txt
image-equalize/src/: equalize.py
line-drawing/: pyproject.toml  requirements.txt
line-drawing/src/: line_drawing.py
morphology-open-close/: pyproject.toml
morphology-open-close/src/: open-close.py
rgb-converter/: README.md  cmyk_converter.py  pyproject.toml  requirements.txt
rgb-converter/src/: base_converter.py  hsl_converter.py  rgb_converter.py
segmentation/: pyproject.toml
segmentation/src/: convolution.py  segmentation.py
transformation-matrix/: pyproject.toml  requirements.txt
transformation-matrix/src/: matrix_transformation.py
