[tool.poetry]
name = "dilation-erosion-grayscale"
version = "1.0.0"
description = "Implementa operações de dilatação e erosão em escala de cinza."
authors = ["Olavo Nascimento <olavo.nascimento4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
