[tool.poetry]
name = "Line Drawing"
version = "1.0.0"
description = "Implementa o algoritmo de Bresenham e ponto média para desenho de retas e circunferências respectivamente."
authors = ["Olavo Nascimento <olavo.nascimento4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
