[tool.poetry]
name = "rgb-converter"
version = "1.0.0"
description = "Converte imagens RGB para HSL e CMYK."
authors = ["Olavo Nascimento <olavo.nascimento4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"
numpy = "^1.23.1"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
