[tool.poetry]
name = "image-segmentation"
version = "1.0.0"
description = "Implementa os algoritmos de limiarização simples e o método de OTSU."
authors = ["Olavo Nascimento <olavo.nascimento4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
